# bevy_input_actionmap

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: hello_world.rs  hello_world_enum.rs  hello_world_serde.rs  hello_world_string.rs  keybindings.ron  serialization_file.rs
src/: input.rs  lib.rs  serialize.rs
tests/: serialization.rs
