[package]
name = "bevy_input_actionmap"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = ["bevy_winit", "x11"] }
