[package]
name = "bevy_input_actionmap"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", default-features = false }
serde = { version = "1", optional = true }

[dev-dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "x11"] }
ron = "0.6"

[features]
default = []
serialize = ["bevy/serialize", "serde"]