[package]
name = "bevy_input_actionmap"
version = "0.13.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_winit", "x11"] }
ron = "0.8"

[features]
default = []
serialize = ["bevy/serialize", "serde"]


[[example]]
name = "serialization_file"
required-features = ["serialize"]
